Knicks1 almost done home page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>PERSONAL SITE</title>
-  <body>
-    <h1>:)</h1>
-  </body>
+	<head>
+		<title>New York Knicks</title>
+<!-- Media query for narrow browser width -->
+<link rel="stylesheet" media="only screen and (max-width: 480px)" href="styles/mobile.css" />
+
+<!-- Media query for smartphones -->
+<link rel="stylesheet" media="only screen and (max-device-width: 568px)" href="styles/mobile.css" />
+
+
+<!-- Media query for medium browser width -->
+<link rel="stylesheet" media="only screen and (min-width: 481px) and (max-width: 960px)" href="styles/tablet.css" />
+
+<!-- Media query for tablets -->
+<link rel="stylesheet" media="only screen and (min-device-width : 768px) and (max-device-width : 1024px)" href="styles/tablet.css" />
+
+<!-- Media query for full browser width -->
+<link rel="stylesheet" media="only screen and (min-width: 961px)" href="styles/desktop.css" />
+
+<!-- Prevents smartphones from scaling pages down -->
+<meta name="viewport" content="initial-scale=1">
+	</head>
+	<body>
+		<div id="wrapper"></div>
+		<div id="pic1"></div>
+		<div id="pic2"></div>
+		<div id="pic3"></div>
+			</br>	
+		<div id="bg"></div>
+		<div id="content">
+			</br>
+			<center><h1>The New York Knicks</h1></center>
+			<p>&nbsp;&nbsp;&nbsp;Checking out the Draft</p>
+			<div id="link1"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"/><p>&nbsp;&nbsp;&nbsp;<img src="images/link1.png"/></p></div>
+			<p>>&nbsp;&nbsp;&nbsp;July 2 in Years Past</p>
+			<a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"/><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p>
+		</div>
+	</body>
 </html>
