--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <meta name="viewport" content="initial-scale=1">
 	</head>
 	<body>
+		<a href="http://knicks.com"><div id="spinlogo"></div></a>
 		<div id="wrapper"></div>
 		<div id="pic1"></div>
 		<div id="pic2"></div>
@@ -30,11 +31,14 @@
 		<div id="bg"></div>
 		<div id="content">
 			</br>
+			</br>
+			</br>
+			</br>
 			<center><h1>The New York Knicks</h1></center>
-			<p>&nbsp;&nbsp;&nbsp;Checking out the Draft</p>
-			<div id="link1"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"/><p>&nbsp;&nbsp;&nbsp;<img src="images/link1.png"/></p></div>
-			<p>>&nbsp;&nbsp;&nbsp;July 2 in Years Past</p>
-			<a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"/><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p>
+			<p>&nbsp;Checking out the Draft</p>
+			<div id="link1"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p>&nbsp;&nbsp;&nbsp;<img src="images/link1.png"/></p></div></a>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;July 2 in Years Past</p>
+			<div id="link2"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"/><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p></div>
 		</div>
 	</body>
 </html>
