3 of 4 pics done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	</head>
 	<body>
 		<a href="http://knicks.com"><div id="spinlogo"></div></a>
+		<nav>
+        	Item 1 | Item 2 | Item 3 
+		</nav>
 		<div id="wrapper"></div>
 		<div id="pic1"></div>
 		<div id="pic2"></div>
@@ -35,10 +38,12 @@
 			</br>
 			</br>
 			<center><h1>The New York Knicks</h1></center>
-			<p>&nbsp;Checking out the Draft</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Checking out the Draft</p>
 			<div id="link1"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p>&nbsp;&nbsp;&nbsp;<img src="images/link1.png"/></p></div></a>
-			<p>&nbsp;&nbsp;&nbsp;&nbsp;July 2 in Years Past</p>
-			<div id="link2"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"/><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p></div>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;July 2 in Years Past</p>
+			<div id="link2"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p></a></div>
+			<div id="Ant"><p>What Can Antetokoumpo Bring to the Knicks? Ask the D-League!</p></div><div id="link3"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p><img src="images/link3.png"/></p></a>
+			<div id="Early"><p>Who is Anthony Early?</p></div><div id="link4"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p><img src="images/link4.png"/></p></a>
 		</div>
 	</body>
 </html>
