--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 			</br>
 			<center><h1>The New York Knicks</h1></center>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Checking out the Draft</p>
-			<div id="link1"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p>&nbsp;&nbsp;&nbsp;<img src="images/link1.png"/></p></div></a>
+			<div id="link1"><a href="http://www.nba.com/knicks/podcast-breaking-down-knicks-draft"><p>&nbsp;&nbsp;&nbsp;<img src="images/link1.png"/></p></div></a>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;July 2 in Years Past</p>
-			<div id="link2"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p></a></div>
-			<div id="Ant"><p>What Can Antetokoumpo Bring to the Knicks? Ask the D-League!</p></div><div id="link3"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p><img src="images/link3.png"/></p></a>
-			<div id="Early"><p>Who is Anthony Early?</p></div><div id="link4"><a href="http://www.toonpool.com/user/3107/files/the_page_cannot_be_displayed_380415.jpg"><p><img src="images/link4.png"/></p></a>
+			<div id="link2"><a href="http://www.nba.com/knicks/date-knicks-history-july-2"><p>&nbsp;&nbsp;&nbsp;<img src="images/link2.png"/></p></a></div>
+			<div id="Ant"><p>What Can Antetokoumpo Bring to the Knicks? Ask the D-League!</p></div><div id="link3"><a href="http://www.nba.com/knicks/thanasis-antetokoumpo-nba-d-league-highlights"><p><img src="images/link3.png"/></p></a>
+			<div id="Early"><p>Who is Anthony Early?</p></div><div id="link4"><a href="http://www.nba.com/knicks/1-on-1-cleanthony-early"><p><img src="images/link4.png"/></p></a>
 		</div>
 	</body>
 </html>
